# aftermarket-fish

./: .gitignore  CMakeLists.txt  FenParser.cpp  FenParser.h  Position.cpp  Position.h  README.md  bitboard.cpp  bitboard.h  main.cpp
src/: Bitboard.cpp  Bitboard.h  Direction.cpp  Direction.h  FenParser.cpp  FenParser.h  MoveGenerator.cpp  MoveGenerator.h  Position.cpp  Position.h  Util.cpp  Util.h  main.cpp
